Implement chat server core functionality with event listener support
- Added ChatServerCore class to manage server operations, client connections, and message handling.
- Introduced ClientSessionInfo class to encapsulate client session details.
- Created ServerEventListener interface for event-driven architecture, allowing listeners to respond to server events.
- Developed ServerAdminApp for a graphical user interface to manage the chat server, including starting/stopping the server and monitoring connected clients.
- Implemented methods for broadcasting messages, handling client connections, and managing user lists.
- Added utility methods for encoding/decoding messages and normalizing client names.